--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>UI/UX Designer &amp; Web Developer.</h2>
+            <h2>Software Development Engineer in Test.</h2>
             <p class="fst-italic py-3">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
@@ -121,16 +121,16 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>11 June 1999</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.suhdanshukb.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 87895 67127</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Patna, Bihar</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>26</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>agarwalsudhanshu25@yahoo.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
@@ -221,7 +221,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>I am a Software Engineer with a strong background in test automation and a passion for creating high-quality software. With a Bachelor's degree in Mathematics from the College of Commerce, Arts & Science, Patna, and years of experience in automation testing, I've honed my skills and expertise in a range of tools and technologies.</p>
+        <p>I am a Software Engineer with a strong background in test automation and a passion for creating high-quality software. 
+          With a Bachelor's degree in Mathematics from the College of Commerce, Arts & Science, Patna, and years of experience in automation testing, I've honed my skills and expertise in a range of tools and technologies.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -248,14 +249,21 @@
               <h5>2015 - 2016</h5>
               <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
               <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
-            </div><!-- Edn Resume Item -->
+            </div>
 
             <div class="resume-item">
               <h4>Bachelor of Science (Hons)</h4>
               <h5>2016 - 2019</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+              <p><em>College of Commerce, Arts & Science</em></p>
               <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
-            </div><!-- Edn Resume Item -->
+            </div>
+
+            <div class="resume-item">
+              <h4>High School</h4>
+              <h5>2014 - 2016</h5>
+              <p><em>R.K.D. College, Patna</em></p>
+              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+            </div>
 
           </div>
 
@@ -272,7 +280,7 @@
                 <li>Test Case requirement analysis, design and execution</li>
                 <li>Followed Agile software development</li>
               </ul>
-            </div><!-- Edn Resume Item -->
+            </div>
 
             <div class="resume-item">
               <h4>System Associate/SDET at Infosys</h4>
@@ -284,7 +292,7 @@
                 <li>Recommended and consulted with clients on the most appropriate graphic design</li>
                 <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
               </ul>
-            </div><!-- Edn Resume Item -->
+            </div>
 
           </div>
 
@@ -514,7 +522,7 @@
           </div>
 
           <div class="col-lg-7">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form action="https://public.herotofu.com/v1/399ea3a0-3f31-11ef-91e4-b1221c7356b8" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -564,10 +572,6 @@
         <p>© <span>Copyright</span> <strong class="px-1 sitename">Sudhanshu</strong> <span>All Rights Reserved</span></p>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
