--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Sudhanshu Kumar Bhawsinghka</h2>
-        <p>I'm <span class="typed" data-typed-items="Software Engineer, SDET, Freelancer, Developer">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>I'm a <span class="typed" data-typed-items="Software Engineer, SDET, Freelancer, Developer">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -102,7 +102,11 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p class="fst-italic py-3">Welcome to my digital profile!</p>
+
+          <p>I am a Software Engineer specializing in test automation, with a strong focus on delivering high-quality software solutions. With a Bachelor's degree in Mathematics from the College of Commerce, Arts & Science in Patna, and over three years of experience in both manual and automation testing, I am dedicated to ensuring software excellence.
+          I am currently part of the CDMS automation team at Veeva Systems, where I write Java code to automate UI test cases, create and maintain automation scripts, and analyze regression runs. My passion for software quality drives me to continuously seek improvements in testing processes.
+        </p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -114,14 +118,15 @@
           <div class="col-lg-8 content">
             <h2>Software Development Engineer in Test.</h2>
             <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              I adopt a proactive mindset, always looking for opportunities to enhance processes and outcomes. 
+              My strong communication and interpersonal skills enable me to thrive in collaborative environments, 
+              making me an effective team member and partner in achieving project goals.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>11 June 1999</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.suhdanshukb.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span> <a href="www.sudhanshukb.github.io"> www.sudhanshukb.github.io </span></a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 87895 67127</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Patna, Bihar</span></li>
                 </ul>
@@ -136,8 +141,7 @@
               </div>
             </div>
             <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
+              When I'm not coding, I enjoy playing chess, which sharpens my problem-solving skills and strategic thinking..
             </p>
           </div>
         </div>
@@ -152,7 +156,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>I am proficient in a wide range of technologies and methodologies that support my work in automation testing. 
+          My skills are continuously evolving, reflecting my commitment to staying updated with industry standards and best practices.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -221,8 +226,9 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>I am a Software Engineer with a strong background in test automation and a passion for creating high-quality software. 
-          With a Bachelor's degree in Mathematics from the College of Commerce, Arts & Science, Patna, and years of experience in automation testing, I've honed my skills and expertise in a range of tools and technologies.</p>
+        <p>I am a dedicated Software Engineer specializing in test automation, driven by a passion for delivering high-quality software solutions. 
+          Holding a Bachelor's degree in Mathematics from the College of Commerce, Arts & Science, Patna, I bring years of hands-on experience in automation testing. 
+          My expertise spans a diverse array of tools and technologies, allowing me to effectively design and implement robust testing frameworks that ensure software excellence.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -234,35 +240,42 @@
 
             <div class="resume-item pb-0">
               <h4>Sudhanshu Kumar B</h4>
-              <p><em>Having 2.5+ year experience as Software Engineer. Prepared scripts for web UI, API, Mobile App, database and other service automations. Always learning and creating new tools to optimize testing process for teams. Growing towards application development frontend and backend areas.</em></p>
+              <p><em>I am a Software Engineer with over 2.5 years of experience specializing in automation testing. 
+                I have developed scripts for web UI, API, mobile applications, databases, and various service automations. 
+                Committed to continuous learning, I actively create innovative tools to optimize testing processes for my teams. 
+                I am also expanding my skill set in both frontend and backend application development to enhance my contributions in the software development lifecycle.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
+                <li>Patna, Bihar</li>
+                <li>+91-87895 67127</li>
                 <li>alice.barkley@example.com</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <h3 class="resume-title">Education</h3>
 
-            <div class="resume-item">
+            <!-- <div class="resume-item">
               <h4>Master of Fine Arts &amp; Graphic Design</h4>
               <h5>2015 - 2016</h5>
               <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
               <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
-            </div>
+            </div> -->
 
             <div class="resume-item">
-              <h4>Bachelor of Science (Hons)</h4>
+              <h4>Bachelor's Degree in Mathematics (Honors)</h4>
               <h5>2016 - 2019</h5>
-              <p><em>College of Commerce, Arts & Science</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <p><em>College of Commerce, Arts & Science, Patna</em></p>
+              <p>I earned my Bachelor's Degree in Mathematics (Honors) from the College of Commerce, Arts & Science, Patna. 
+                This rigorous program equipped me with a strong analytical foundation and problem-solving skills, fostering my ability to think critically and approach challenges methodically. 
+                My academic journey not only deepened my understanding of mathematical concepts but also prepared me for a successful career in software engineering and test automation.</p>
             </div>
 
             <div class="resume-item">
               <h4>High School</h4>
               <h5>2014 - 2016</h5>
               <p><em>R.K.D. College, Patna</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <p>I completed my High Schooling with a focus on Physics, Chemistry, and Mathematics (PCM). 
+                This foundational education provided me with a strong understanding of scientific principles and analytical thinking, setting the stage for my further studies in Mathematics and my career in software engineering. 
+                My high school experience instilled in me a passion for problem-solving and a solid groundwork for tackling complex challenges.</p>
             </div>
 
           </div>
@@ -483,7 +496,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <!-- <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p> -->
+        <p>I am enthusiastic about exploring new challenges and opportunities. 
+          Please feel free to connect with me to discuss potential collaborations or engage in discussions related to automation testing and technology.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
