--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
         <h2>About</h2>
         <p class="fst-italic py-3">Welcome to my digital profile!</p>
 
-          <p>I am a Software Engineer specializing in test automation, with a strong focus on delivering high-quality software solutions. With a Bachelor's degree in Mathematics from the College of Commerce, Arts & Science in Patna, and over three years of experience in both manual and automation testing, I am dedicated to ensuring software excellence.
-          I am currently part of the CDMS automation team at Veeva Systems, where I write Java code to automate UI test cases, create and maintain automation scripts, and analyze regression runs. My passion for software quality drives me to continuously seek improvements in testing processes.
+          <p>I am a Software Engineer specialized in test automation, with a strong focus on delivering high-quality software solutions. With a Bachelor's degree in Mathematics from the College of Commerce, Arts & Science in Patna, and having over three years of experience in both manual and automation testing, I am dedicated to ensuring software excellence.
+          I am currently a part of the CDMS automation team at Veeva Systems, where I write Java code to automate UI test cases, create and maintain automation scripts, and analyze regression runs. My passion for software quality drives me to continuously seek improvements in testing processes.
         </p>
       </div><!-- End Section Title -->
 
@@ -134,7 +134,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>26</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>agarwalsudhanshu25@yahoo.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
@@ -226,8 +226,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>I am a dedicated Software Engineer specializing in test automation, driven by a passion for delivering high-quality software solutions. 
-          Holding a Bachelor's degree in Mathematics from the College of Commerce, Arts & Science, Patna, I bring years of hands-on experience in automation testing. 
+        <p>I am a dedicated Software Engineer specialized in test automation, driven by a passion for delivering high-quality software solutions. 
+          Holding a Bachelor's degree in Mathematics from the College of Commerce, Arts & Science, Patna, I have gained years of hands-on experience in automation testing. 
           My expertise spans a diverse array of tools and technologies, allowing me to effectively design and implement robust testing frameworks that ensure software excellence.</p>
       </div><!-- End Section Title -->
 
@@ -239,8 +239,8 @@
             <h3 class="resume-title">Sumary</h3>
 
             <div class="resume-item pb-0">
-              <h4>Sudhanshu Kumar B</h4>
-              <p><em>I am a Software Engineer with over 2.5 years of experience specializing in automation testing. 
+              <h4>Sudhanshu Kumar B.</h4>
+              <p><em>I am a Software Engineer with over 3 years of experience specialized in automation testing. 
                 I have developed scripts for web UI, API, mobile applications, databases, and various service automations. 
                 Committed to continuous learning, I actively create innovative tools to optimize testing processes for my teams. 
                 I am also expanding my skill set in both frontend and backend application development to enhance my contributions in the software development lifecycle.</em></p>
@@ -273,7 +273,7 @@
               <h4>High School</h4>
               <h5>2014 - 2016</h5>
               <p><em>R.K.D. College, Patna</em></p>
-              <p>I completed my High Schooling with a focus on Physics, Chemistry, and Mathematics (PCM). 
+              <p>I completed my High School with a focus on Physics, Chemistry, and Mathematics (PCM). 
                 This foundational education provided me with a strong understanding of scientific principles and analytical thinking, setting the stage for my further studies in Mathematics and my career in software engineering. 
                 My high school experience instilled in me a passion for problem-solving and a solid groundwork for tackling complex challenges.</p>
             </div>
@@ -288,7 +288,7 @@
               <p><em>Hyderabad, India </em></p>
               <ul>
                 <li>I am at the forefront of ensuring software quality by designing and implementing robust automation test frameworks.</li>
-                <li>I specialize in UI Automation testing, API Testing , Database Testing, working collaboratively with cross-functional teams to guarantee the highest standards of software quality. </li>
+                <li>I am specialized in UI Automation testing, API Testing , Database Testing, & am working collaboratively with cross-functional teams to guarantee the highest standards of software quality. </li>
                 <li>Maintenance of CI/CD automation testing pipelines</li>
                 <li>Test Case requirement analysis, design and execution</li>
                 <li>Followed Agile software development</li>
@@ -296,7 +296,7 @@
             </div>
 
             <div class="resume-item">
-              <h4>System Associate/SDET at Infosys</h4>
+              <h4>Senior System Associate/SDET at Infosys</h4>
               <h5>Dec, 2021- Oct, 2023</h5>
               <p><em>Bhubaneswar, Odisa</em></p>
               <ul>
